--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
   "keywords": [],
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "gulp serve",
     "start:tunnel": "gulp serve:tunnel",
-    "build": "gulp build:optimized"
+    "build": "gulp build:optimized",
+    "lint": "eslint src/**/*.js"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
+    "babel-eslint": "8",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.5.2",
@@ -22,6 +23,11 @@
     "browser-sync": "^2.18.12",
     "connect-history-api-fallback": "^1.3.0",
     "css-loader": "^0.28.4",
+    "eslint": "4.x",
+    "eslint-config-airbnb": "16.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
     "gulp": "^3.9.1",
